<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FamilyTask</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="kimono">Kimono</string>
    <string name="task_name">Task Name</string>
    <string name="task_description">Description</string>
    <string name="assigned_spinner">Assigneed:</string>
    <string name="add_task_button">Add Task</string>
    <string name="create_task_priority">Priority:</string>

    <string-array name="tasks_types">
        <item>Assigned</item>
        <item>Watched</item>
        <item>Created</item>
    </string-array>

</resources>
